# loopr-python-sdk

./: .flake8  .gitignore  .isort  .travis.yml  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  setup.cfg
docs/source/: annotation.rst  client.rst  conf.py  dataset.rst  index.rst  project.rst  row.rst
loopr/: __init__.py  client.py  exceptions.py  main.py
loopr/api/annotation/: annotation.py
loopr/api/dataset/: __init__.py  abs_dataset.py  dataset.py  image_dataset.py  paired_dataset.py  sku_dataset.py  text_dataset.py
loopr/api/project/: __init__.py  abs_project.py  categorization_project.py  object_detection_project.py  project.py  relevancy_project.py
loopr/api/row/: __init__.py  abs_row.py  image_row.py  paired_row.py  row.py  sku_row.py  text_row.py
loopr/api/urls/: urls.py
loopr/models/entities/: data_types.py  loopr_enitity.py  loopr_object.py  loopr_object_collection.py
loopr/models/schemas/: dataset.py
loopr/resources/: constants.py
loopr/utils/: common_utils.py  response_handler.py  retry.py
tests/: conftest.py  test_datasets.py  test_loopr.py  test_projects.py  test_rows.py  testing_helpers.py
