[tool.poetry]
name = "loopr-python-sdk"
version = "0.1.0"
description = "A python sdk to interact with loopR APIs."
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.6"
pytest = "flake8"
flake8 = "^3.8.4"
pytest-cov = "^2.10.1"

[tool.poetry.dev-dependencies]
isort = "^5.6.4"
black = "^20.8b1"
autoflake = "^1.4"
mypy = "^0.790"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
