[tool.poetry]
name = "loopr"
version = "0.1.0"
description = "A python sdk to interact with loopR APIs."
authors = ["LoopR"]

[tool.poetry.dependencies]
python = "^3.6"
pytest = "flake8"
flake8 = "^3.8.4"
pytest-cov = "^2.10.1"
loguru = "^0.5.3"

[tool.poetry.dev-dependencies]
isort = "^5.6.4"
black = "^20.8b1"
autoflake = "^1.4"
mypy = "^0.790"
twine = "^3.2.0"
python-dotenv = "^0.14.0"
coverage = "^5.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
